--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,43 @@
 }
 
 nav {
-    
+    height: 80px;
+    display: flex;
 }
+
+.nav__container {
+   width: 100%;
+   max-width: 1200px;
+   padding: 0 24px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.logo {
+    width: 160px;
+}
+
+ul {
+    display: flex;
+}
+
+li {
+    list-style-type: none;
+}
+
+.nav__link {
+    margin-left: 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: purple;
+    font-weight: bold;
+    padding: 8px;
+}
+
+.nav__link--primary {
+    border: 2px solid purple;
+    border-radius: 4px;
+}
+
