--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ nav {
     display: flex;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px;
+}
+
 .nav__container {
    width: 100%;
    max-width: 1200px;
@@ -19,6 +26,10 @@ nav {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
+}
+
+.purple {
+   color: purple; 
 }
 
 .logo {
@@ -42,8 +53,93 @@ li {
     padding: 8px;
 }
 
+.nav__link:hover {
+    text-decoration: underline;
+}
+
 .nav__link--primary {
     border: 2px solid purple;
     border-radius: 4px;
 }
 
+.nav__link--primary:hover {
+    text-decoration: none;
+}
+
+#landing {
+background-color: rgba(115, 66, 214, 0.1);
+}
+
+header {
+    height: 100vh - 80px;
+}
+
+.header__container {
+    padding-top: 24px;
+width: 100%;
+max-width: 720px;
+margin: 0 auto;
+height: 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+}
+
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 56px;
+    color: purple;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 32px;
+    margin-bottom: 32px;
+    text-align: center; 
+}
+
+button {
+   cursor: pointer; 
+}
+
+button:active {
+    transform: translateY(1px);
+}
+
+.btn {
+    background-color: purple;
+    color: white;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+}
+
+.header__img--wrapper {
+padding: 20px;
+}
+
+.container {
+padding: 56px 0;
+}
+
+.row {
+width: 100%;
+max-width: 1200px;
+margin: auto;
+}
+/*
+
+HIGHLIGHTS
+
+*/
+
+.highlight__wrapper {
+    
+}
