--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,10 @@ nav {
 
 img {
     width: 100%;
-    height: 100%;
-    max-height: 50vh;
-    padding: 20px;
+}
+
+p {
+    list-style: 1.5;
 }
 
 .nav__container {
@@ -123,6 +124,7 @@ button:active {
 
 .header__img--wrapper {
 padding: 20px;
+z-index: 2px;
 }
 
 .container {
@@ -140,6 +142,63 @@ HIGHLIGHTS
 
 */
 
+#highlight {
+    position: relative;
+    max-width: 100vw;
+}
+
+#highlights:after,
+#highlights:before {
+    background: url("./wave.svg");
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    top: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+#highlight:before {
+    transform: translateY(-100%);
+    top: 1px;
+}
+
 .highlight__wrapper {
     display: flex;
+}
+
+.highlight {
+    padding: 0 24px;
+    width: calc(100% / 3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.highlight__para {
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img {
+    border: 2px solid #7342d6;
+    color: #7342a6;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font: 32px;
+    margin-bottom: 24px;
+}
+
+.highlight__subtitle {
+   font-size: 20px; 
+   margin-bottom: 16px;
 }
