--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -142,7 +147,7 @@ HIGHLIGHTS
 
 */
 
-#highlight {
+#highlights {
     position: relative;
     max-width: 100vw;
 }
@@ -158,16 +163,21 @@ HIGHLIGHTS
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
-    transform: translateY(-100%);
 }
 
-#highlight:before {
+#highlights:before {
     transform: translateY(-100%);
     top: 1px;
 }
 
+#highlights:after {
+    transform: translateY(100%) rotate(180deg);
+    bottom: 1px;
+}
+
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
@@ -200,4 +210,15 @@ HIGHLIGHTS
 .highlight__subtitle {
    font-size: 20px; 
    margin-bottom: 16px;
+}
+
+/*
+
+FEATURES
+
+*/
+
+#features {
+    padding-top: 8vw;
+   background-color: rgba( 115, 66, 214, 0.1);
 }
